Tapbar and Navbar z-index fixed

--- a/client/src/Components/Nav/Nav.css
+++ b/client/src/Components/Nav/Nav.css
@@ -8,7 +8,7 @@
   width: 375px;
   height: 96px;
   box-shadow: 0 7px 15px 0 rgba(165, 165, 165, 0.075);
-  z-index: 10;
+  z-index: 30;
 }
 
 .tittle-inside {
